--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-pro-sidebar": "^1.1.0-alpha.1",
-    "react-router-dom": "^6.18.0",
+    "react-router-dom": "^6.20.1",
+    "react-social-login-buttons": "^3.9.1",
     "react-toastify": "^9.1.3",
-    "yup": "^1.3.2"
+    "reactjs-social-login": "^2.6.3"
+
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
